--- a/ecommerce-vtex/src/components/Header/style.less
+++ b/ecommerce-vtex/src/components/Header/style.less
@@ -2,7 +2,7 @@
 
 header {
 	background-color: @primary-color;
-	padding: 1em;
+	padding: 0 1em;
   margin: 0 3em 0 3em;
 	display: flex;
 	justify-content: space-between;
@@ -72,34 +72,5 @@ header {
   }
 }
 
-nav{
-  width: 100%;
-  border-bottom: 1px solid #eaeaea;
- 
-  .header-menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin: 1em;
-    padding: 0;
-    list-style: none;
-    .header-menu__item a {
-      color: @tertiary-color;
-      text-decoration: none;
-      font-size: 16px;
-      font-weight: 600;
-      display: flex;
-      align-items: center;
-      img{
-        margin-right: .3em;
-      }
-    }
-    
-    .header-menu__item a:hover {
-      color: @secondary-color;
-      font-weight: bold;
-    }
-  }
-}
 
 
