[FEAT] adicionando componente banner e categorias

--- a/ecommerce-vtex/src/assets/style/variable.less
+++ b/ecommerce-vtex/src/assets/style/variable.less
@@ -5,7 +5,7 @@
 @quaternary-color: #2A2A2A;
 @text-white: #FFFFFF;
 @text-gray: #3F3F40;
-
+@secondary-gray:  #F4F4F4;
 
 // Fontes
 @primary-font: "Roboto", sans-serif;
