--- a/ecommerce-vtex/src/components/Home/style.less
+++ b/ecommerce-vtex/src/components/Home/style.less
@@ -5,7 +5,8 @@
   margin: auto;
   width: 100%;
   height: 100vh;
-  overflow: auto;
+  overflow-x: hidden;
   background: rgba(255,255,255,1.00);
   font-family: 'Roboto', sans-serif;
 }
+
