--- a/ecommerce-vtex/src/components/Categorias/style.less
+++ b/ecommerce-vtex/src/components/Categorias/style.less
@@ -27,6 +27,7 @@
       font-weight: 600;
       font-size: 18px;
       line-height: 24px;
+      text-align: center;
     }
     &:hover{
       transform: scale(1.1);
