--- a/ecommerce-vtex/src/components/Home/style.less
+++ b/ecommerce-vtex/src/components/Home/style.less
@@ -6,7 +6,8 @@
   width: 100%;
   height: 100vh;
   overflow-x: hidden;
-  background: rgba(255,255,255,1.00);
+  background: rgba(255, 255, 255, 1.00);
   font-family: 'Roboto', sans-serif;
-}
 
+
+}
