[FINISH] adicionando componentes modal e footer

--- a/ecommerce-vtex/src/components/CardProdutos/style.less
+++ b/ecommerce-vtex/src/components/CardProdutos/style.less
@@ -5,12 +5,12 @@
     height: 20em;
 
     .card-produto {
-        width: 25em;
+        width: 35em;
         height: 15em;
         border-radius: 1em;
         background-image: url(/src/assets/img/bg-card.svg);
         background-repeat: no-repeat;
-        background-size: contain;
+        background-size: cover;
 
         .itens {
             color: white;
