--- a/ecommerce-vtex/src/components/Marcas/style.less
+++ b/ecommerce-vtex/src/components/Marcas/style.less
@@ -21,7 +21,7 @@
         align-items: center;
 
         .icon {
-            width: 9em;
+            width: 10em;
             height: 10em;
             background: #FFFFFF;
             box-shadow: 0px 7px 20px rgba(0, 0, 0, 0.13);
@@ -30,6 +30,11 @@
             background-repeat: no-repeat;
             background-size: 8em;
             background-position: center;
+            &:hover {
+                transform: scale(1.1);
+                transition: 1s;
+                cursor: pointer;
+              }
         }
     }
 }
