--- a/ecommerce-vtex/src/components/SlideProdutos/style.less
+++ b/ecommerce-vtex/src/components/SlideProdutos/style.less
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 2em;
+
   h1 {
     font-family: 'Poppins';
     color: #F71963;
@@ -13,21 +14,28 @@
     font-size: 30px;
     line-height: 45px;
   }
-  hr{
+
+  hr {
     width: 20em;
     height: 0em;
     border: 1px solid #DEDEDE;
 
   }
 }
-
+.todos{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
 .controls {
   display: flex;
   justify-content: space-between;
   position: relative;
-  top: 22em;
+  top: 17em;
   width: 100%;
   margin: 0 auto;
+
   button {
     border: none;
     background-color: transparent;
@@ -42,6 +50,7 @@
     }
   }
 }
+
 .content {
   width: 90%;
   margin: 0 auto;
@@ -50,7 +59,8 @@
     display: flex;
     justify-content: center;
     margin-top: 0.3em;
-    height: 40em;
+    height: 30em;
+
     .container {
       margin: 0 auto;
 
@@ -58,60 +68,65 @@
         margin: 0 auto;
         display: flex;
         flex-direction: column;
-        padding: 1em 0em;
+        padding: 1em;
         justify-content: space-between;
-        align-items: center; 
+        align-items: center;
         background: #FFFFFF;
         box-shadow: 0px 3px 19px rgba(0, 0, 0, 0.22);
         border-radius: 10px;
         width: 13em;
-        height: 35em;
+        height: 25em;
         font-family: Poppins;
 
         img {
-          width: 100%; 
-          height: 14em; 
-          object-fit: cover; 
+          width: 10em;
+          height: 10em;
+          object-fit: cover;
           border-radius: 10px 10px 0 0;
         }
 
         .text {
-          margin: 1.5em 2em 2em; 
-          flex: 1; 
+          width: 100%;
+          height: 5em;
+          margin: 0;
           display: flex;
           flex-direction: column;
-          justify-content: space-between;
+          justify-content: space-around;
+          padding: 1em;
 
           p {
             margin: 0;
             font-size: 1em;
-            line-height: 1.5;
           }
 
           p:nth-child(3) {
             color: #3F3F40;
             font-style: normal;
             font-weight: 700;
-            font-size: 1.25em;
+            font-size: 1em;
             line-height: 1.5;
             margin-top: 0.5em;
           }
         }
 
         .end {
+          padding: 1em;
           display: flex;
           flex-direction: column;
           align-items: flex-start;
-          margin: 0 2em;
+          justify-content: flex-end;
+          height: 5em;
+          width: 100%;
+
           p:nth-child(1) {
             color: #F71963;
             margin-bottom: 0.5em;
-            font-size: 1.125em; 
+            font-size: .85em;
             font-weight: 400;
           }
 
           button {
-            width: 10em;
+            width: 13em;
             height: 3em;
             background: #F71963;
             border-radius: 5px;
@@ -120,7 +135,7 @@
             font-weight: 600;
             font-size: 16px;
             line-height: 27px;
-  
+
             &:hover {
               transform: scale(1.1);
               transition: 1s;
@@ -128,6 +143,61 @@
             }
           }
         }
+      }
+    }
+  }
+}
+
+.modal-header {
+  height: 0;
+}
+
+.modal-body {
+  .modal-produto {
+    display: flex;
+
+    p:nth-child(1) {
+      font-family: 'Lato';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 100%;
+      letter-spacing: 0.05em;
+      color: #041E50;
+    }
+
+    p:nth-child(2) {
+      font-family: 'Lato';
+      font-style: normal;
+      font-weight: 900;
+      font-size: 20px;
+      line-height: 100%;
+      letter-spacing: 0.05em;
+      color: #041E50;
+    }
+    p:nth-child(3) {
+      font-family: 'Lato';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 10px;
+      line-height: 150.5%;
+      /* or 15px */
+      
+      letter-spacing: 0.05em;
+      
+      color: #222222;
+    }
+    p:nth-child(4) {
+      font-family: 'Lato';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 12px;
+      line-height: 100%;
+      letter-spacing: 0.05em;
+      color: #041E50;
+      &:hover {
+        font-weight: bold;
+        cursor: pointer;
       }
     }
   }
