--- a/ecommerce-vtex/src/components/Footer/style.less
+++ b/ecommerce-vtex/src/components/Footer/style.less
@@ -3,7 +3,7 @@ footer {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 22em;
+  height: 23em;
   background-color: #2A2A2A;
   font-family: Poppins;
   color: #FFFFFF;
@@ -14,6 +14,7 @@ footer {
     align-items: stretch;
     justify-content: space-between;
     padding: 2em 2em 0;
+    margin-right: 2em;
 
     div {
       width: 18em;
